Fixed messed up logo spacing when the user logs in. Or I think I did. I have to put it on a server to test it.

--- a/src/app/components/nav-bar/nav-buttons/nav-buttons.component.scss
+++ b/src/app/components/nav-bar/nav-buttons/nav-buttons.component.scss
@@ -8,6 +8,10 @@
 
 .spacing {
   margin-right: 4px;
+
+  .mat-button {
+    line-height: inherit;
+  }
 }
 
 .mat-icon {
